<resources>
    <string name="app_name">Food Delivery</string>
    <string name="ip_address">13.235.250.119</string>
    <string name="token">e5b9ee0aa22f36</string>
    <string name="close_drawer">Close Drawer</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="add_to_cart_btn">Add</string>
    <string name="proceed_to_cart_btn">Proceed to Cart</string>
    <string name="choose_from_menu_listed_below">Choose from menu listed below:</string>
    <string name="ordering_from">Ordering From: </string>
    <string name="place_order">Place Order (Rs)</string>
    <string name="shared_preferences">RestaurantPreference</string>
    <string name="your_previous_orders_are_listed_below">Your previous orders :</string>
    <string name="can_t_find_any_restaurant_with_that_name">Can\'t find any Restaurant with that name!</string>
    <string name="no_orders_placed">No Orders Placed Yet</string>
    <string name="tagline">Your hunger partner</string>
    <string name="applogo">appLogo</string>
    <string name="cost_high_to_low">Cost(High to Low)</string>
    <string name="cost_low_to_high">Cost(Low to High)</string>
    <string name="desc_logo">Logo of Food Delivery</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="don_t_have_an_account_sign_up_now"><u>Don\'t have an account? Sign up now</u></string>
    <string name="ok">OK</string>
    <string name="your_order_has_been_successfully_placed">Your order has been successfully placed!</string>
    <string name="order_placed">Order Placed</string>
    <string name="rs_demo">Rs.XXX</string>
    <string name="food_item_name_demo">Food Item Name</string>
    <string name="enter_your_registered_mobile_number_and_email_below">Enter your registered mobile number and email below:</string>
    <string name="mobile_number_10_digits">Mobile Number(10 digits)</string>
    <string name="email_address">Email Address</string>
    <string name="next">Next</string>
    <string name="name_min_3_characters">Name (Min 3 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_min_6">Password(Min 6)</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="register">Register</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="price_person">price/person</string>
    <string name="log_out">Log out</string>
    <string name="faqs">FAQs</string>
    <string name="order_history">Order History</string>
    <string name="favorite_restaurants">Favorite Restaurants</string>
    <string name="my_profile">My Profile</string>
    <string name="home">Home</string>
    <string name="question1">Q1. Why is FoodDelivery doing this?</string>
    <string name="answer1">A1. At FoodDelivery we strive to add value to your business. We understand the challenges you face on a daily basis in sourcing the best quality packaging material. FoodDelivery Packaging Assist is to take care of all your packaging needs.</string>
    <string name="question2">Q2. How are you guys different?</string>
    <string name="answer2">A2. Best products - We only list the products which have passed our tests and are the best suitable for delivery. They will help in giving a better consumer experience, so you can get repeated orders. Best prices - We have negotiated rates with our distributors exclusive for FoodDelivery Restaurant. Convenience - No need to haggle for prices. No need to follow-up on delivery. We track all orders to ensure you have a hassle free experience.</string>
    <string name="question3">Q3. Why is FoodDelivery doing this?</string>
    <string name="answer3">A3. At FoodDelivery we strive to add value to your business. We understand the challenges you face on a daily basis in sourcing the best quality packaging material. FoodDelivery Packaging Assist is to take care of all your packaging needs.</string>
    <string name="question4">Q4. How are you guys different?</string>
    <string name="answer4">A4. Best products - We only list the products which have passed our tests and are the best suitable for delivery. They will help in giving a better consumer experience, so you can get repeated orders. Best prices - We have negotiated rates with our distributors exclusive for FoodDelivery Restaurant. Convenience - No need to haggle for prices. No need to follow-up on delivery. We track all orders to ensure you have a hassle free experience.</string>

</resources>
