<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="fragment.LoginFragment">


    <RelativeLayout
        android:id="@+id/fragment_login_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="1dp"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp">

        <ImageView
            android:id="@+id/imgAppIcon"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="40dp"
            android:contentDescription="@string/desc_logo"
            android:src="@drawable/app_logo_full" />

        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgAppIcon"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="4dp"
            android:hint="@string/mobile_number_10_digits"
            android:inputType="phone"
            android:maxLength="10"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etMobileNumber"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="4dp"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:maxLength="8"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etPassword"
            android:layout_centerInParent="true"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:backgroundTint="@color/colorAccent"
            android:padding="10dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <TextView
        android:id="@+id/txtSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/don_t_have_an_account_sign_up_now"
        android:textColor="@color/white"
        android:textSize="18sp" />

</RelativeLayout>