<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".fragment.ForgotPasswordInputFragment">

    <RelativeLayout
        android:id="@+id/forgotPasswordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="1dp"
        android:visibility="invisible">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:padding="5dp">

        <ImageView
            android:id="@+id/imgAppIcon"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/desc_logo"
            android:padding="10dp"
            android:src="@drawable/app_logo_full" />

        <TextView
            android:id="@+id/txtForgotPasswordDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgAppIcon"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="25dp"
            android:padding="4dp"
            android:text="@string/enter_your_registered_mobile_number_and_email_below"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtForgotPasswordDetails"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:hint="@string/mobile_number_10_digits"
            android:inputType="number"
            android:maxLength="10"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/etMobileNumber"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etEmail"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

</RelativeLayout>